@startuml

title __UTIL's Class Diagram__\n

  namespace  {
    namespace til {
      class application.AnimationManager {
          {static} - valuesToAnimate : ArrayList<Animator>
          {static} + animate()
          {static} + getValuesToAnimate()
          {static} + setValuesToAnimate()
      }
    }
  }
  

  namespace  {
    namespace til {
      class util.Animator {
          + howManyFrames : int
          + pingPong : boolean
          + speed : float
          # lerpVal : float
          + Animator()
          + animate()
      }
    }
  }
  

  namespace  {
    namespace til {
      class util.Material {
          - metalness : float
          - reflectivity : float
          - refractiveIndex : float
          - roughness : float
          - transparent : boolean
          + Material()
          + Material()
          + Material()
          + Material()
          + Material()
          + getAlbedoColor()
          + getMetalness()
          + getReflectivity()
          + getRefractiveIndex()
          + getRoughness()
          + isTransparent()
          + setAlbedoColor()
          + setMetalness()
          + setReflectivity()
          + setRefractiveIndex()
          + setRoughness()
          + setTransparent()
      }
    }
  }
  

  namespace  {
    namespace til {
      class util.MaterialAnimator {
          - startFloat : float
          - targetFloat : float
          + MaterialAnimator()
          + animate()
      }
    }
  }
  

  namespace  {
    namespace til {
      enum MaterialValueType {
        color
        reflectivity
        refractiveIndex
        roughness
      }
    }
  }
  

  namespace  {
    namespace til {
      class util.MathUtil {
          {static} + clamp()
          {static} + clampF()
          {static} + generatRandomPositiveNegitiveValue()
          {static} + lerp()
          {static} + solveQuadratic()
          {static} ~ blend()
      }
    }
  }
  

  namespace  {
    namespace til {
      class util.RenderUtil {
          {static} ~ F0 : float
          {static} ~ indexGlas : float
          {static} ~ indexLuft : float
          {static} ~ indexWasser : float
          {static} ~ k : float
          {static} ~ refrA : float
          {static} ~ refrB : float
          {static} ~ totalReflexion : boolean
          {static} + CookTorranceNeu()
          {static} + getColRecursive()
          {static} + getPointinSphere()
          {static} + getReflexionVector()
          {static} + getRefractionVector()
          {static} + randomSpherePoint()
          {static} + shadowCheck()
      }
    }
  }
  

  namespace  {
    namespace til {
      class util.TransformationAnimator {
          + TransformationAnimator()
          + animate()
      }
    }
  }
  

  namespace  {
    namespace til {
      enum Vector3Type {
        position
        rotation
        scale
      }
    }
  }
  

  util.Animator o-- objects.SceneObject : object
  util.Material o-- math.Vector3 : albedoColor
  util.MaterialAnimator -up-|> util.Animator
  util.MaterialAnimator o-- math.Vector3 : targetVec
  util.MaterialAnimator o-- util.MaterialAnimator.MaterialValueType : valueType
  util.MaterialAnimator o-- util.Material : startMat
  util.MaterialAnimator o-- math.Vector3 : startVec
  util.MaterialAnimator o-- util.Material : targetMat
  util.MaterialAnimator +-down- util.MaterialAnimator.MaterialValueType
  util.TransformationAnimator -up-|> util.Animator
  util.TransformationAnimator o-- math.Vector3 : targetVec
  util.TransformationAnimator o-- util.TransformationAnimator.Vector3Type : vectorType
  util.TransformationAnimator o-- math.Vector3 : startVec
  util.TransformationAnimator +-down- util.TransformationAnimator.Vector3Type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
